--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx puppeteer browsers install chrome && node index.js"
+  },
   "license": "MIT",
   "type": "module",
   "dependencies": {
